--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,14 @@
 spring.application.name=rainboweasywalk
 
-spring.datasource.url=jdbc:postgresql://turntable.proxy.rlwy.net:54530/railway
-spring.datasource.username=postgres
-spring.datasource.password=SfRPGDXDSAdWwXaPUEuIrYfsRshzpfna
+#spring.datasource.url=jdbc:postgresql://turntable.proxy.rlwy.net:54530/railway
+#spring.datasource.username=postgres
+#spring.datasource.password=SfRPGDXDSAdWwXaPUEuIrYfsRshzpfna
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
+
+frontend.url=${FRONTEND_URL}
 
 spring.datasource.hikari.connection-timeout=30000
 spring.datasource.hikari.maximum-pool-size=5
