before deploy updated render.yaml

--- a/render.yaml
+++ b/render.yaml
@@ -1,7 +1,7 @@
 services:
   - type: web
     name: rainboweasywalk
-    env: java
+    runtime: java
     buildCommand: "./mvnw clean install"
     startCommand: "java -jar target/rainboweasywalk-0.0.1-SNAPSHOT.jar"
     envVars:
