--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@ DB_URL=jdbc:postgresql://turntable.proxy.rlwy.net:54530/railway
 DB_USERNAME =postgres
 DB_PASSWORD=SfRPGDXDSAdWwXaPUEuIrYfsRshzpfna
 
-FRONTEND_URL=https://rainboweasywalk.netlify.app/
+FRONTEND_URL=https://rainboweasywalk.netlify.app
